<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MySimsimi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>    
   	<string name="forgot_password">Forgot Password?</string>
    <string name="forget_account">Forget this account</string>
    
    <string name="photo">photo</string>  
    <string name="Profile">Profile</string>
    <string name="name">name</string>         
    <string name="email">email</string>
    <string name="optional">optional</string> 
    <string name="email_private">email_private</string>  
    
  	<string name="login_dialog_message">Please wait while logging into Xiaohuoban!...</string>
  	<string name="login_dialog_title">Logging in...</string>    
 	<string name="login_failed_login_toast">Unable to log in. Please check your username and password.</string> 
 	<string name="login_welcome_toast">Welcome to Xiaohuoban!</string>
 	
 	<string name="register_dialog_message">Please wait while registering to Xiaohuoban!...</string>
  	<string name="register_dialog_title">Registering ...</string>    
 	<string name="register_failed_register_toast">Unable to register. Please check your username, email and password.</string> 
 	<string name="register_welcome_toast">Welcome to Xiaohuoban!</string>
 	
   	<string name="teach_dialog_message">Teaching xiaohuoban!...</string>
  	<string name="teach_dialog_title">Teach</string>  	
 	
    <string name="test_dumpcatcher_product_key">key...</string>  
    <string name="test_dumpcatcher_secret">secret</string>
    <string name="test_dumpcatcher_url">url</string>    
    	
    <string name="dumpcatcher_product_key">key...</string>  
    <string name="dumpcatcher_secret">secret</string>
    <string name="dumpcatcher_url">url</string>
    
    <string name="get_answer_dialog_title">Geting Answer</string>    
    <string name="get_answer_dialog_message">Please wait while Running...</string>
    	
    <string name="SearchString">Type your question</string>
</resources>